tests/invalid/double_label.s
  .text

  .global _start
  _start:
func:
  nop
  call func
  nop
func:
  nop
  